8191938: Fix lint warnings in JAXP repo: a few Deprecation warrnings and enable -Xlint:all
Reviewed-by: darcy, rriggs